# AmritaCore

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  future-request.yml  question.yml
.github/workflows/: CI.yml  PR.yml
demo/: basic.py  basic_with_sessions.py  cli.py  hook.py  stream_using.py
demo/tools/: normal.py  simple.py
docs/: EN_US.md  ZH_CN.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/styles/: palette.scss
docs/.vitepress/theme/: custom.css
docs/guide/: appendix.md  builtins.md  extensions-integration.md  function-implementation.md  security-mechanisms.md
docs/guide/api-reference/: index.md
docs/guide/concepts/: event.md  index.md  management.md  tool.md
docs/guide/getting-started/: architecture.md  basic-example.md  index.md  minimal-example.md
docs/guide/introduction/: features.md  index.md
docs/zh/: index.md
readmes/: EN_US.md  ZH_CN.md
src/amrita_core/: __init__.py  chatmanager.py  config.py  libchat.py  logging.py  preset.py  protocol.py  sessions.py  tokenizer.py  types.py  utils.py
tests/: test_adapter.py  test_agent.py  test_chatmanager.py  test_chatobject.py  test_complete_content_validation.py  test_content_deserialization.py  test_integration.py  test_logger.py  test_manager.py  test_matcher.py  test_mcp.py  test_message_deserialization.py  test_message_edge_cases.py  test_preset.py  test_register_content.py  test_serialization_integrity.py  test_sessions.py  test_tools.py  test_types.py  test_utils.py
(+55 files in other folders)
